; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/serial/extr_kl5kusb105.c_klsi_105_chg_port_settings.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/serial/extr_kl5kusb105.c_klsi_105_chg_port_settings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_serial_port = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.klsi_105_port_settings = type { i32, i32, i32, i32, i32 }

@KL5KUSB105A_SIO_SET_DATA = common dso_local global i32 0, align 4
@USB_TYPE_VENDOR = common dso_local global i32 0, align 4
@USB_DIR_OUT = common dso_local global i32 0, align 4
@USB_RECIP_INTERFACE = common dso_local global i32 0, align 4
@KLSI_TIMEOUT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"Change port settings failed (error = %d)\0A\00", align 1
@.str.1 = private unnamed_addr constant [55 x i8] c"pktlen %u, baudrate 0x%02x, databits %u, u1 %u, u2 %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_serial_port*, %struct.klsi_105_port_settings*)* @klsi_105_chg_port_settings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @klsi_105_chg_port_settings(%struct.usb_serial_port* %0, %struct.klsi_105_port_settings* %1) #0 {
  %3 = alloca %struct.usb_serial_port*, align 8
  %4 = alloca %struct.klsi_105_port_settings*, align 8
  %5 = alloca i32, align 4
  store %struct.usb_serial_port* %0, %struct.usb_serial_port** %3, align 8
  store %struct.klsi_105_port_settings* %1, %struct.klsi_105_port_settings** %4, align 8
  %6 = load %struct.usb_serial_port*, %struct.usb_serial_port** %3, align 8
  %7 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.usb_serial_port*, %struct.usb_serial_port** %3, align 8
  %12 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @usb_sndctrlpipe(i32 %15, i32 0)
  %17 = load i32, i32* @KL5KUSB105A_SIO_SET_DATA, align 4
  %18 = load i32, i32* @USB_TYPE_VENDOR, align 4
  %19 = load i32, i32* @USB_DIR_OUT, align 4
  %20 = or i32 %18, %19
  %21 = load i32, i32* @USB_RECIP_INTERFACE, align 4
  %22 = or i32 %20, %21
  %23 = load %struct.klsi_105_port_settings*, %struct.klsi_105_port_settings** %4, align 8
  %24 = load i32, i32* @KLSI_TIMEOUT, align 4
  %25 = call i32 @usb_control_msg(i32 %10, i32 %16, i32 %17, i32 %22, i32 0, i32 0, %struct.klsi_105_port_settings* %23, i32 20, i32 %24)
  store i32 %25, i32* %5, align 4
  %26 = load i32, i32* %5, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %2
  %29 = load %struct.usb_serial_port*, %struct.usb_serial_port** %3, align 8
  %30 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %29, i32 0, i32 0
  %31 = load i32, i32* %5, align 4
  %32 = call i32 @dev_err(i32* %30, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %31)
  br label %33

33:                                               ; preds = %28, %2
  %34 = load %struct.usb_serial_port*, %struct.usb_serial_port** %3, align 8
  %35 = getelementptr inbounds %struct.usb_serial_port, %struct.usb_serial_port* %34, i32 0, i32 0
  %36 = load %struct.klsi_105_port_settings*, %struct.klsi_105_port_settings** %4, align 8
  %37 = getelementptr inbounds %struct.klsi_105_port_settings, %struct.klsi_105_port_settings* %36, i32 0, i32 4
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.klsi_105_port_settings*, %struct.klsi_105_port_settings** %4, align 8
  %40 = getelementptr inbounds %struct.klsi_105_port_settings, %struct.klsi_105_port_settings* %39, i32 0, i32 3
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.klsi_105_port_settings*, %struct.klsi_105_port_settings** %4, align 8
  %43 = getelementptr inbounds %struct.klsi_105_port_settings, %struct.klsi_105_port_settings* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 4
  %45 = load %struct.klsi_105_port_settings*, %struct.klsi_105_port_settings** %4, align 8
  %46 = getelementptr inbounds %struct.klsi_105_port_settings, %struct.klsi_105_port_settings* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 4
  %48 = load %struct.klsi_105_port_settings*, %struct.klsi_105_port_settings** %4, align 8
  %49 = getelementptr inbounds %struct.klsi_105_port_settings, %struct.klsi_105_port_settings* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = call i32 @dev_dbg(i32* %35, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.1, i64 0, i64 0), i32 %38, i32 %41, i32 %44, i32 %47, i32 %50)
  %52 = load i32, i32* %5, align 4
  ret i32 %52
}

declare dso_local i32 @usb_control_msg(i32, i32, i32, i32, i32, i32, %struct.klsi_105_port_settings*, i32, i32) #1

declare dso_local i32 @usb_sndctrlpipe(i32, i32) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
